@@ -1,0 +1,39 @@
+<h1>K-pop新方向？韓國Trot音樂復興！林英雄破億點擊率，SM娛樂推出Trot偶像團體</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7-xZUipENQE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>近年來，K-pop 在全球市場的持續擴張之外，另一個音樂類型在韓國國內音樂界迅速崛起：Trot。一些 Trot 歌手的成功之後，主要的 K-pop 娛樂公司開始涉足 Trot 和 K-pop 的意外組合。</p>
+<p>Trot 是自 1930 年代以來韓國流行音樂的一部分，以活潑的節奏和豐富的顫音為特徵，歌詞往往迎合老一輩的情感。然而，近年來，Trot 歌手參加的選秀節目的成功導致了年輕 Trot 藝人的崛起，他們的受歡迎程度與 K-pop 明星不相上下，吸引了更廣泛的觀眾。</p>
+<p>林英雄是當今最受歡迎的 Trot 歌手之一，他在 2020 年參加朝鮮電視台的《Mr. Trot》後一舉成名。他成為第一位在國內音樂串流網站 Melon 上累計播放量超過 100 億次的獨唱藝人，也是第一位在 2022 年甜瓜音樂獎上獲得兩項大獎的 Trot 歌手。最近，林英雄在首爾世界盃體育場舉行了個人演唱會，兩天內吸引了約 10 萬名觀眾。</p>
+<p>一些 K-pop 娛樂公司似乎對這種 Trot 復興感興趣，並開始模糊 Trot 和 K-pop 之間的界限。其中一個熱衷於這種新方法的是一位 19 歲的 K-pop 粉絲，她希望只透露自己的名字。</p>
+<p>這位粉絲表示：“有一個新的 K-pop 男子團體即將出道，他們將是一個 Trot 樂隊，我非常興奮。我知道 Trot 主要與老一輩相關，但我聽過一些 Trot 歌曲，它們真的很好！”</p>
+<p>SM 娛樂計劃今年晚些時候與朝鮮電視台合作推出一個 Trot 偶像團體。該團體名為 MYTRO，由五名成員組成：</p>
+<ul>
+<li>林采炫（曾參加朝鮮電視台選秀節目《Mr. Trot》）</li>
+<li>Tey（前 MR.MR 成員）</li>
+<li>徐宇赫（演員）</li>
+<li>鄭允在（演員）</li>
+<li>Shohei（來自日本，曾是 SM 的 K-pop 訓練生）</li>
+<p></ul></p>
+<p>朝鮮電視台將播出一檔新的綜藝節目《Falling for a Trot-dol: Lovestruckonas》，記錄 MYTRO 成員出道前的旅程。該節目也將在韓國和日本播出，這表明 MYTRO 將在海外發展。</p>
+一位業內人士表示：“Trot 和 K-pop 都有堅實的粉絲群，我們希望這兩種類型的組合能夠創造出協同效應。SM 娛樂一直在跨類型實驗，從古典音樂到電子舞曲和 R&B，所以這可以被視為其中的一部分。”<h2>K-pop 娛樂公司進軍 Trot 市場</h2>
+<p>近日，K-pop 娛樂公司 JYP 娛樂宣布計劃通過其子公司 INNIT 娛樂選拔新的 Trot 人才。這一舉動引起了 K-pop 粉絲的熱議。</p>
+<p>一位 20 歲的韓國 K-pop 粉絲表示，Trot 和 K-pop 的受眾群體有很大的不同，JYP 娛樂的這一舉動是否能夠滿足特定消費群體的需求還是未知數。</p>
+<p>然而，這位粉絲也指出，Trot 和 K-pop 之間有一個相似之處，那就是強大的粉絲參與度，這可能會有利於類型融合。另外，Trot 可能還會吸引全球觀眾，因為它是一種他們可能從未聽過的類型。</p>
+<p>另一位 K-pop 粉絲表示，K-pop 內部人士應該嘗試在歌曲中融入更多的韓國元素，而不是試圖迎合西方觀眾。她還建議，K-pop 的擴張應該來自於韓國的不同音樂類型，如 Trot，而不是來自於全球市場上流行的東西。</p>
+<ul>
+<li>Trot 和 K-pop 之間的相似之處：強大的粉絲參與度</li>
+<li>Trot 可能吸引全球觀眾，因為它是一種新的類型</li>
+<li>K-pop 內部人士應該嘗試在歌曲中融入更多的韓國元素</li>
+<li>K-pop 的擴張應該來自於韓國的不同音樂類型，如 Trot</li>
+<p></ul></p>
+<h2>韓國音樂產業的創新嘗試：融合K-pop與Trot的新潮流</h2>
+<p>音樂評論家林熙允認為，K-pop與Trot的融合是音樂產業為了突破現有的K-pop局限而進行的嘗試之一。這種新的嘗試引發了是否仍可被視為K-pop的疑問，就像多國籍K-pop組合或本地化組合如Dear Alice和KATSEYE一樣。</p>
+<p>林熙允補充道，日本是K-pop的主要海外市場之一，而日本有一種叫做演歌的音樂類型，其情感基調與Trot相似。因此，Trot偶像似乎是一個值得嘗試的冒險。林熙允還表示，Trot迄今為止在國內取得的成功也是令人鼓舞的。</p>
+<ul>
+<li>K-pop與Trot的融合是音樂產業為了突破現有的K-pop局限而進行的嘗試之一。</li>
+<li>日本的演歌音樂類型與Trot相似，Trot偶像似乎是一個值得嘗試的冒險。</li>
+<li>Trot迄今為止在國內取得的成功也是令人鼓舞的。</li>
+<p></ul></p>
+
+<p>資料來源： Korea Herald</p>
