@@ -27,3 +27,4 @@ https://www.koreaherald.com/view.php?ud=20240925050621
 https://www.koreaherald.com/view.php?ud=20240925050613
 https://www.koreaherald.com/view.php?ud=20240925050470
 https://www.koreaherald.com/view.php?ud=20241002050525
+https://www.koreaherald.com/view.php?ud=20241002050512
